--- a/views/search.pug
+++ b/views/search.pug
@@ -9,3 +9,14 @@ html
   body
     //NAV
     include _header
+    
+    //- h1 this is h1
+    //- each fi in final
+    //-   h1= fi
+
+    section.search 
+      .search-box 
+        form.search-form(action="") 
+          .div 
+            input#search-input(type="text" placeholder="Search query")
+            input#search-submit(type="submit" value="Search")
