--- a/views/document.pug
+++ b/views/document.pug
@@ -10,6 +10,9 @@ html
     //NAV
     include _header
 
+    button Create new document
     each ne in newData
       h2 #{ne}
+      button Delete
+      button Update
       hr
