--- a/views/index.pug
+++ b/views/index.pug
@@ -9,6 +9,8 @@ html
     //NAV
     include _header
 
+    button Create new index
     each fi in final
       h1= fi
+      button delete
       hr
