--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,8 +1,8 @@
 nav.nav
   ul.nav-list
     li.nav-link
-      a(href='index') Index
+      a(href='/index') Index
     li.nav-link
-      a(href='document') Document
+      a(href='/document') Document
     li.nav-link
-      a(href='search') Search
+      a(href='/search') Search
