--- a/views/index.pug
+++ b/views/index.pug
@@ -9,8 +9,18 @@ html
     //NAV
     include _header
 
-    button Create new index
-    each fi in final
-      h1= fi
-      button delete
+    section.search 
+      .search-box 
+        form.search-form(method='GET' action="/index") 
+          .div 
+            input#search-input(type="text" name='new_index' placeholder="Type new index name")
+            input#search-submit(type="submit" value="Create")
+
+    each index in indicesString
+      h1= index
+      - index = index.split(' ').join('_');
+
+      p
+        form(method='GET' action=`/index/${index}?_method=DELETE`)
+          button(type='submit') Delete
       hr
