--- a/views/search.pug
+++ b/views/search.pug
@@ -18,6 +18,22 @@ html
             input#search-submit(type="submit" value="Search")
 
     h1= data
-    each ne in newData
-      h2 #{ne}
+    each documents in documentHits
+      h2 Document's Information
+        h3=`Index name: ${documents._index}`
+        h3=`Document's Id: ${documents._id}`
+      h2 Document's Data
+        h3=`NOC: ${documents._source.noc}`
+        h3=`Sex: ${documents._source.sex}`
+        h3=`City: ${documents._source.city}`
+        h3=`Weight: ${documents._source.weight}`
+        h3=`Name: ${documents._source.name}`
+        h3=`Sport: ${documents._source.sport}`
+        h3=`Games: ${documents._source.games}`
+        h3=`Event: ${documents._source.event}`
+        h3=`Height: ${documents._source.height}`
+        h3=`Team: ${documents._source.team}`
+        h3=`Id: ${documents._source.Id}`
+        h3=`Medal: ${documents._source.medal}`
+        h3=`Age: ${documents._source.age}`
       hr
