--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,6 +1,8 @@
 nav.nav
   ul.nav-list
     li.nav-link
+      a(href='/upload') Upload
+    li.nav-link
       a(href='/index') Index
     li.nav-link
       a(href='/document') Document
