--- a/views/search.pug
+++ b/views/search.pug
@@ -10,36 +10,26 @@ html
     //NAV
     include _header
 
+    .dropdown
+      button.dropbtn Choose Index
+        .dropdown-content
+          each index in indicesString
+            - index = index.split(' ').join('_');
+              a(href=`/search/${index}`)= index
     section.search 
       .search-box 
-        form.search-form(method='GET' action="/search") 
+        form.search-form(method='GET' action=`${searchAction}`) 
           .div 
+
             input#search-input(type="text" name='query_string' placeholder="Type something")
             input#search-submit(type="submit" value="Search")
+          input#limit-box(type="number" name='limit' placeholder="100")
 
-    //- each documents in documentHits
-    //-   h2 Document's Information
-    //-     h3=`Index name: ${documents._index}`
-    //-     h3=`Document's Id: ${documents._id}`
-    //-   h2 Document's Data
-    //-     h3=`NOC: ${documents._source.noc}`
-    //-     h3=`Sex: ${documents._source.sex}`
-    //-     h3=`City: ${documents._source.city}`
-    //-     h3=`Weight: ${documents._source.weight}`
-    //-     h3=`Name: ${documents._source.name}`
-    //-     h3=`Sport: ${documents._source.sport}`
-    //-     h3=`Games: ${documents._source.games}`
-    //-     h3=`Event: ${documents._source.event}`
-    //-     h3=`Height: ${documents._source.height}`
-    //-     h3=`Team: ${documents._source.team}`
-    //-     h3=`Id: ${documents._source.Id}`
-    //-     h3=`Medal: ${documents._source.medal}`
-    //-     h3=`Age: ${documents._source.age}`
-    //-   hr
     - let hide = ''
     - if(documentHits.length === 0) hide='inactive';
     .container-document(class=`${hide}`)
       p= `Results: ${documentHits.length}`
+
         table.document-table
           tr
             th Index name
