--- a/public/css/style.css
+++ b/public/css/style.css
@@ -154,7 +154,7 @@ body {
   border-radius: 0.25rem;
   box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
   box-sizing: border-box;
-  color: rgba(0, 0, 0, 0.85);
+  color: white;
   cursor: pointer;
   display: inline-flex;
   font-family: system-ui, -apple-system, system-ui, 'Helvetica Neue', Helvetica,
@@ -180,7 +180,7 @@ body {
 .btn:focus {
   border-color: rgba(0, 0, 0, 0.15);
   box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
-  color: rgba(0, 0, 0, 0.65);
+  color: rgba(120, 187, 221, 0.65);
 }
 
 .btn:hover {
@@ -276,4 +276,15 @@ body {
 
 .dropdown:hover .dropbtn {
   background-color: #1971c2;
+}
+
+.dropdown-search {
+  margin-left: 25%;
+  margin-top: 20px;
+}
+
+.element-index a {
+  text-decoration: none;
+  font-size: 2.4rem;
+  color: black;
 }
