--- a/views/search.pug
+++ b/views/search.pug
@@ -20,7 +20,7 @@ html
     section.search 
       .search-box 
         form.search-form(method='GET' action=`${searchAction}`) 
-          input#limit-box(type="number" name='limit' placeholder="100")
+          input#limit-box(type="number" name='limit' placeholder="100" min="0")
           .div 
 
             input#search-input(type="text" name='query_string' placeholder="Type something")
