--- a/views/upload.pug
+++ b/views/upload.pug
@@ -13,4 +13,5 @@ html
       .upload-container
         input.upload-index(type="text" name='new_index' placeholder="Type new index name")
         input.upload-file(type="file" name="myFile")
+        p(style="color:red;font-size:1.5rem") Note: JSON file only!
         input.upload-submit(type="submit" value="Upload a file")
