--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,7 +68,8 @@ body {
   height: 4.8rem;
   font-size: 2.4rem;
   width: 80%;
-  border-radius: 20px 0 0 20px;
+  /* border-radius: 20px 0 0 20px; */
+  border: 2px solid black;
   text-indent: 2rem;
 }
 
@@ -198,7 +199,7 @@ body {
 }
 
 .inactive {
-  display: none;
+  display: none !important;
 }
 
 .document-input-container {
@@ -280,9 +281,8 @@ body {
   background-color: #1971c2;
 }
 
-.dropdown-search {
-  margin-left: 25%;
-  margin-top: 20px;
+.dropdown-search .dropbtn {
+  border-radius: 20px 0 0 20px;
 }
 
 .element-index a {
