--- a/views/document.pug
+++ b/views/document.pug
@@ -55,4 +55,4 @@ html
                 td= value[val]
               td(style="width:10px")
                 form(method='GET' action=`/document/${value[0]}/${value[1]}?_method=DELETE`)
-                  button(type='submit') Delete
+                  button.btn.btn-delete(type='submit') Delete
