--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .nav {
-  background-color: #1971c2;
+  background-color: #1d3557;
   height: 6rem;
   display: flex;
   align-items: center;
@@ -78,12 +78,12 @@ body {
   width: 20%;
   border-radius: 0 20px 20px 0;
   font-size: 2.4rem;
-  background-color: #1971c2;
+  background-color: #e63946;
   color: white;
 }
 
 #search-submit:hover {
-  background-color: #1c7ed6;
+  background-color: #eb616b;
   transform: translateY(-1px);
 }
 
@@ -124,7 +124,7 @@ body {
 
 .document-table td,
 .document-table th {
-  border: 1px solid #ddd;
+  border: 1px solid #f1faee;
   padding: 8px;
 }
 
@@ -133,17 +133,18 @@ body {
 }
 
 .document-table tr:hover {
-  background-color: #ddd;
+  background-color: #c7d7e2;
 }
 
 .document-table th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #4dabf7;
+  background-color: #457b9d;
   color: white;
   text-align: center;
   font-size: 2rem;
+  font-weight: 700;
 }
 
 .document-table tr {
@@ -152,7 +153,7 @@ body {
 
 .btn {
   align-items: center;
-  background-color: #4dabf7;
+  background-color: #e76f51;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 0.25rem;
   box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
@@ -183,7 +184,7 @@ body {
 .btn:focus {
   border-color: rgba(0, 0, 0, 0.15);
   box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
-  color: rgba(120, 187, 221, 0.65);
+  background-color: #f4a261;
 }
 
 .btn:hover {
@@ -191,11 +192,19 @@ body {
 }
 
 .btn:active {
-  background-color: #f0f0f1;
+  background-color: #ee747e;
   border-color: rgba(0, 0, 0, 0.15);
   box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
   color: rgba(0, 0, 0, 0.65);
   transform: translateY(0);
+}
+
+.btn.btn-delete {
+  height: 2px;
+  width:80%;
+  font-size: 1.4rem;
+  padding: 0;
+  margin: auto;
 }
 
 .inactive {
@@ -229,18 +238,26 @@ body {
   font-size: 2.4rem;
   border-radius: 20px;
 }
+.upload-container .upload-file {
+  font-size: 2.4rem;
+}
 
 .upload-container .upload-index {
   text-indent: 2rem;
 }
 
 .upload-container .upload-submit {
-  background-color: #1971c2;
+  background-color: #e63946;
   color: white;
 }
 
+.upload-container .upload-submit:hover {
+  background-color: #eb616b;
+}
+
 .dropbtn {
-  background-color: #4dabf7;
+  background-color: #30566e;
+  border-radius: 0.4rem;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -257,9 +274,10 @@ body {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  transform: translate(-16px, 16px);
 }
 
 .dropdown-content a {
@@ -278,7 +296,7 @@ body {
 }
 
 .dropdown:hover .dropbtn {
-  background-color: #1971c2;
+  background-color: #3e6f8d;
 }
 
 .dropdown-search .dropbtn {
@@ -293,7 +311,6 @@ body {
 
 .err-container {
   width: 80%;
-  /* background-color: #1c7ed6; */
   margin: 100px auto;
   display: flex;
   flex-direction: column;
@@ -321,9 +338,32 @@ body {
   flex-direction: row;
   align-items: center;
   gap: 20px;
+  width: 80%;
+  margin: auto;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.result-container {
+  background-color: #adc178;
+  height: 50px;
+  line-height: 50px;
+  border-radius: 0.4rem;
 }
 
 .result {
-  font-size: 3rem;
-  font-weight: 600;
+  font-size: 4rem;
+  color: white;
+  width: 100px;
+  text-align: center;
+}
+
+.field-result .dropbtn {
+  background-color: #6a95b1;
+  width: 200px;
+  /* border-radius: 0.4rem 0.4rem 0 0; */
+}
+
+.field-result .dropbtn:hover {
+  background-color: #8fb0c4;
 }
